[tool.black]
line-length = 100
target_version = ['py37']

[tool.poetry]
name = "bitcoin-prometheus-exporter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.17.0"
python-bitcoinlib = "^0.12.1"
riprova = {git = "https://github.com/JettScythe/riprova.git", rev = "Python3.11"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
